--- a/sh/package.json
+++ b/sh/package.json
@@ -3,15 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
     "@fontsource/great-vibes": "^5.2.8",
     "@next-auth/mongodb-adapter": "^1.1.3",
-    "@studio-freight/lenis": "^1.0.42",
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "framer-motion": "^12.23.12",
@@ -23,8 +22,8 @@
     "mongoose": "^8.18.0",
     "next": "15.5.0",
     "next-auth": "^4.24.11",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-icons": "^5.5.0",
     "styled-components": "^6.1.19",
     "swiper": "^12.0.1"
@@ -35,12 +34,12 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^20.19.11",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.7",
     "babel-plugin-styled-components": "^2.1.4",
-    "eslint": "^9",
+    "eslint": "^9.35.0",
     "eslint-config-next": "15.5.0",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "tailwindcss": "^4.3.2",
+    "typescript": "^5.9.2"
   }
 }
