Disable ESLint in build

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "react-hot-toast": "^2.6.0"
   },
   "devDependencies": {
-    "@types/node": "^24.3.0"
+    "@types/node": "^24.5.2",
+    "@types/react": "^19.1.13",
+    "typescript": "^5.9.2"
   }
 }
