--- a/sh/package.json
+++ b/sh/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build --no-lint",
     "start": "next start"
   },
   "dependencies": {
@@ -19,7 +19,7 @@
     "lucide-react": "^0.544.0",
     "mongodb": "^5.9.2",
     "mongoose": "^8.18.0",
-    "next": "15.5.0",
+    "next": "15.0.0", 
     "next-auth": "^4.24.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -28,14 +28,14 @@
     "swiper": "^12.0.1"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^20.19.11",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.7",
     "babel-plugin-styled-components": "^2.1.4",
-    "tailwindcss": "^4.3.2",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.9.2"
   }
 }
